table related improvement [mode] - record every column's align style - ignore overflowed columns - dummy separator can't affect hmdTableCol counter [style] - left / center / right aligned table column - light theme: removed table out border (due to dummy separators) [table-align] - fix bugs with tableID / eolState / dummy separators

--- a/mode/hypermd.scss
+++ b/mode/hypermd.scss
@@ -50,11 +50,15 @@ span.hmd-link-icon:after {
 }
 
 pre.HyperMD-table-row {
-  white-space: pre;
-  .hmd-table-column,
-  .hmd-table-column-content {
-    display: inline-block;
-  }
+    white-space: pre;
+    .hmd-table-column,
+    .hmd-table-column-content {
+        display: inline-block;
+    }
+
+    .hmd-table-column-left { text-align: left }
+    .hmd-table-column-center { text-align: center }
+    .hmd-table-column-right { text-align: right }
 }
 
 span.hmd-fold-math,
